--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,8 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=block" />
 
+		<link defer rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:600&display=swap">
+
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
